# campus-deliverying-platform

外卖平台0.0（总）/: ALL_FUNCTION.h  CMakeLists.txt  Customer.cpp  Customer.h  Customer_Function.cpp  DeliveryPerson.cpp  DeliveryPerson.h  Delivery_Function.cpp  In_Out_File.cpp  Order.cpp  Order.h  Protected.cpp  Register_and_Login.cpp  Restaurant.cpp  Restaurant.h  RestaurantAdmin.cpp  RestaurantAdmin.h  RestaurantAdmin_Function.cpp  SuperAdmin.cpp  SuperAdmin.h  User.cpp  User.h  测试.cpp
